Update schedule, fix escape character typo

--- a/_data/2021/oxford/schedule.yml
+++ b/_data/2021/oxford/schedule.yml
@@ -52,7 +52,7 @@
   name: Geospatial data and analysis 
   events:
     - name: "10:00 - 13:00 Lecture: Introduction to geospatial data and analysis"
-    - name: "14:00 - 16:00 Lecture\Exercise: Visualising geospatial data" 
+    - name: "14:00 - 16:00 Lecture and Exercise: Visualising geospatial data" 
 
 - date: 2021-06-21
   name: Group Projects Work
