--- a/_data/2021/oxford/schedule.yml
+++ b/_data/2021/oxford/schedule.yml
@@ -1,77 +1,80 @@
-- date: All times are in British Summer Time 
+- date: All times are in British Summer Time (BST)
 
-- date: The current schedule is preliminary
+- date: The current schedule is still preliminary (!)
 
 - date: 2021-06-13
   events:
-    - name: "5:00pm Meet-and-greet"
+    - name: "5:00pm Meet-and-greet, Introductions"
     
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
-    - name: "9:00 - 9:30 Housekeeping, introductions"
-    - name: "10:00 - 12:00 Introduction to reproducible workflows"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Ethics with exercise"
-    - name: "4:00 - 6:00 Research talks"
+    - name: "9:45 - 10:00 Housekeeping"
+    - name: "10:00 - 13:00 Lecture: Introduction to reproducible workflows"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Workshop: Ethics and reproducible workflows"
+    - name: "16:00 - 18:00 Oxford-London Joint Research Talk: David Lazer"
     
 - date: 2021-06-15
   name: Working with digital data - web scraping and APIs
   events:
-    - name: "9:00 - 12:00 Workshop"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Group exercise"
-    - name: "4:00 - 6:00 Research talks"    
-
+    - name: "10:00 - 12:00 Lecture: Introduction to Webscraping and APIs"
+    - name: "12:00 - 13:00 Exercise: Webscraping and APIs exercise"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Research Talk: Ridhi Kashyap"
+    - name: "16:00 - 18:00 Oxford-London Joint Research Talk: Ken Benoit"
+    
 - date: 2021-06-16
-  name: Non-probability samples
+  name: Non-Probability Samples
   events:
-    - name: "9:00 - 12:00 Workshop"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Group exercise"
-    - name: "4:00 - 6:00 Research talks"   
-
+    - name: "10:00 - 13:00 Lecture: Introduction to Non-Probability Samples"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Exercise: Non-Probability Samples"
+    - name: "16:00 - 18:00 Research Talk: Hanna Furnas" 
 - date: 2021-06-17
+
   name: Text as data 
   events:
-    - name: "9:00 - 12:00 Workshop"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Group exercise"
-    - name: "4:00 - 6:00 Research talks"   
+    - name: "10:00 - 13:00 Lecture: Introduction to Text as Data"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Workshop: Text as Data"
+    - name: "16:00 - 18:00 Research Talk: Laura Nelson"
 
 - date: 2021-06-18
   name: Machine learning and computer vision 
   events:
-    - name: "9:00 - 12:00 Workshop"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Group exercise"
-    - name: "4:00 - 6:00 Research talks"   
+    - name: "10:00 - 13:00 Lecture: Introduction to ML and Computer Vision"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Exercise: ML and Computer Vision"
+    - name: "16:00 - 18:00 Research Talk: TBC" 
 
 - date: 2021-06-19
   name: Geospatial data and analysis 
   events:
-    - name: "9:00 - 11:00 Workshop"
-    - name: "11:30 - 13:00 Group exercise" 
+    - name: "10:00 - 13:00 Lecture: Introduction to geospatial data and analysis"
+    - name: "14:00 - 16:00 Lecture and Exercise: Visualising geospatial data" 
 
 - date: 2021-06-21
-  name: Group projects
+  name: Group Projects Work
   events:
-    - name: "9:00 - 12:00 Brainstorming/sorting for group formation in the morning"
-    - name: "12:00 - 1:00 Lunch"
-    - name: "1:30 - 3:30 Groups work on projects"
-    - name: "4:00 - 6:00 Research talks"  
+    - name: "10:00 - 13:00 Brainstorming/sorting for group formation in the morning"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 16:00 Groups work on projects"
+    - name: "16:00 - 18:00 Research Talk: TBC" 
 
 - date: 2021-06-22
-  name: Group projects
+  name: Group Projects Work
+  events:
+    - name: "16:00 - 18:00 Oxford-London Joint Research Talk: Eszter Hargittai"
 
 - date: 2021-06-23
-  name: Group projects
+  name: Group Projects Work
 
 - date: 2021-06-24
-  name: Group projects  
+  name: Group Projects Work
 
-- date: 2021-06-21
+- date: 2021-06-25
   name: Present group projects
   events:
-    - name: "12:00 - 4:00 Present group projects"
-    - name: "4:00 - 4:30 Debrief and conclusion"
+    - name: "12:00 - 16:00 Present group projects"
+    - name: "16:00 - 16:30 Debrief and conclusion"
