--- a/_data/2021/princeton/participants.yml
+++ b/_data/2021/princeton/participants.yml
@@ -6,7 +6,7 @@
 - name: Jacy Anthis
   image: /assets/images/Jacy_Anthis.jpeg
   bio: "Jacy is a PhD student at University of Chicago and co-founder of Sentience Institute. His 2018 book, The End of Animal Farming, analyzes plant-based and cell-cultured food technologies. He has presented his research in over 20 countries, and it has been featured in The Guardian, Forbes, Vox, and other media."
-  website: www.jacyanthis.com
+  website: https://jacyanthis.com/
 
 - name: Carolina Coimbra Vieira
   image: /assets/images/Carolina_Coimbra.jpeg
@@ -31,7 +31,7 @@
 - name: Marcos Gallo
   bio: "Marcos Gallo researches the neuroscience of poverty and discrimination. His motivation directly stems from his experiences growing up in a disadvantaged neighborhood in Brazil. He has a background in Economics, including an MSc from Shanghai Jiao Tong University. When he started his studies at Brigham Young University, he became determined to dedicate his career to helping inform and create effective policies to lift those in poverty."
   image: /assets/images/Marcos_Gallo.jpeg
-  website: linkedin.com/in/marcos-gallo
+  website: https://www.linkedin.com/in/marcos-gallo/
 
 - name: Orestes Hastings
   image: /assets/images/Pat_Hastings.png
@@ -139,9 +139,9 @@
 - name: Renzhe Yu
   image: /assets/images/Renzhe_Yu.jpeg
   bio: "Renzhe Yu is a Ph.D. candidate at the University of California, Irvine, specializing in educational data science. His research leverages large-scale behavioral, textual and institutional analytics to understand and support the success and well-being of young adults in college contexts, and scrutinizes the fairness and equity of such analytical processes. His current work looks into online behavioral inequalities among college students at different types of institutions. Previously, Renzhe has worked as Social Good fellows at the Alan Turing Institute and IBM Research. He received a master’s degree in education policy and two bachelor’s degrees in artificial intelligence and economics, all from Peking University."
-  website: www.renzheyu.com
+  website: https://renzheyu.com/
 
 - name: Shu (Victoria) Zhang
   image: /assets/images/Shu_Zhang.jpeg
   bio: "Victoria Zhang is an Assistant Professor at UW-Madison. Her research focuses on social networks, norm-violating practices, and behavioral change.  She adopts a social networks lens to investigate how micro-level interactions shape norm-violating practices that sustain professional deviance. She obtained her PhD from Yale School of Management."
-  website: www.victoriazhang.com
+  website: https://www.victoriazhang.com/
