Olivia Johnson bio

--- a/_data/2021/princeton/participants.yml
+++ b/_data/2021/princeton/participants.yml
@@ -49,8 +49,9 @@
   website: https://researchportal.helsinki.fi/en/persons/andrey-indukaev/
 
 - name: Olivia Johnson
-  image: /assets/images/blank_square.png
-  bio: "Olivia Johnson is an assistant professor in the department of Human Development and Consumer Sciences at University of Houston."
+  image: /assets/images/Olivia_Johnson.jpeg
+  bio: "Olivia Johnson is an Assistant Professor in Retailing and Consumer Science in Human Development and Consumer Sciences in the College of Technology at the University of Houston. She is the primary investigator on several interdisciplinary teams that focus on the intersection of social movements, consumption, and social media."
+  website: https://www.linkedin.com/in/olivia-johnson-phd-3602b47a/
 
 - name: Anne Kavalerchik
   image: /assets/images/Anne_Kavalerchik.png
