--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -43,10 +43,32 @@
          His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, ‘The Politics of the Welfare State in Turkey’ is forthcoming from the University of Michigan Press."
   website: https://emw.ku.edu.tr/?staff=erdem-yoruk
 
+- name: Ceren Budak
+  image: /assets/images/CerenBudak.jpg
+  bio: Ceren Budak is an Assistant Professor of Information at the School of Information and an Assistant Professor of Electrical Engineering and Computer Science at the University of Michigan. Her research interests lie in the area of computational social science. She utilizes network science, machine learning, and crowdsourcing methods and draws from scientific knowledge across multiple social science communities to contribute computational methods to the field of political communication.
+  website: http://cbudak.com/index.html
+
+- name: Özge Öner
+  image: /assets/images/ÖzgeÖner.jpg
+  bio: Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois.
+
+Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018. She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow.
+
+Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography.
+
+She is a former recipient of Handelsbanken Wallander postdoctoral scholarship in Sweden (2015), Young Investigator Award in Italy (2018), and she is the 2019 recipient of the Young Researcher Award in Sweden.
+
+Özge writes monthly columns at the newspaper Swedish Daily (Svenska Dagbladet).
+  website: https://twitter.com/ozge_oner
+  
+- name: Tuba Bircan
+  image: /assets/images/TubaBircan.jpg
+  bio: Interdisciplinary researcher, data-lover by birth and social scientist by choice. She currently works as an assistant professor at the Department of Sociology and is the research coordinator of the Interface Demography research group at Vrije Universiteit Brussel (VUB), Belgium. She is also affiliated as a senior research associate at HIVA (KU Leuven). Her scholarly interests cover a wide range from migration, refugees, inequalities, equal opportunities, social and public policies to new methodologies and use of Big Data and AI for studying societal challenges. She believes in open science and science for society.
+  website: https://www.tubabircan.com/
+  
 - name:
   image:
   bio:
   website:
-
 
 
