--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -55,7 +55,10 @@
 
 - name: Özge Öner
   image: /assets/images/ÖzgeÖner.jpg
-  bio: "Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois. Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018. She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow. Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography. She is a former recipient of Handelsbanken Wallander postdoctoral scholarship in Sweden (2015), Young Investigator Award in Italy (2018), and she is the 2019 recipient of the Young Researcher Award in Sweden. Özge writes monthly columns at the newspaper Swedish Daily (Svenska Dagbladet)."
+  bio: "Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois. 
+        Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018. 
+        She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow. Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography. 
+        She is a former recipient of Handelsbanken Wallander postdoctoral scholarship in Sweden (2015), Young Investigator Award in Italy (2018), and she is the 2019 recipient of the Young Researcher Award in Sweden. Özge writes monthly columns at the newspaper Swedish Daily (Svenska Dagbladet)."
   website: https://twitter.com/ozge_oner
   
 - name:
