--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -54,7 +54,7 @@
   website: https://www.tubabircan.com/
 
 - name: Özge Öner
-  image: /assets/images/ÖzgeÖner.jpg
+  image: /summer-institute/assets/images/ÖzgeÖner.jpg
   bio: "Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois. 
         Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018. 
         She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow. Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography. 
