--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -36,10 +36,10 @@
 
 - name: Erdem Yörük
   image: /assets/images/ErdemYörük.jpg
-  bio:  "Erdem Yörük is an Associate Professor in the Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford. 
-         He is the principal investigator of the ERC-funded project Emerging Welfare (The New Politics of Welfare Towards an 'Emerging Markets' Welfare State Regime) (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview. 
-         He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University. 
-         His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP. 
+  bio:  "Erdem Yörük is an Associate Professor in the Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford.
+         He is the principal investigator of the ERC-funded project Emerging Welfare (The New Politics of Welfare Towards an 'Emerging Markets' Welfare State Regime) (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview.
+         He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University.
+         His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP.
          His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, ‘The Politics of the Welfare State in Turkey’ is forthcoming from the University of Michigan Press."
   website: https://emw.ku.edu.tr/?staff=erdem-yoruk
 
@@ -54,13 +54,13 @@
   website: https://www.tubabircan.com/
 
 - name: Özge Öner
-  image: /summer-institute/assets/images/ÖzgeÖner.jpg
-  bio: "Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois. 
-        Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018. 
-        She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow. Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography. 
+  image: /assets/images/ÖzgeÖner.jpg
+  bio: "Özge Öner earned her PhD in Economics with a focus on Urban and Regional Economics in Jönköping, Sweden in 2014. She completed part of her PhD studies at the Regional Economics Applications Laboratory (REAL), University of Illinois.
+        Özge started as a Lecturer in Real Estate and Spatial Economics at the Land Economy Department in 2018.
+        She also remains affiliated to Research Institute of Industrial Economics (IFN) in Stockholm as well as Centre for Entrepreneurship and Spatial Economics (CEnSE) in Jönköping as a Research Fellow. Özge’s research deals with issues related to migration, labour mobility, micro-geography of segregation and ethnic enclaves, retail and service geography, geography of entrepreneurship, as well as political geography.
         She is a former recipient of Handelsbanken Wallander postdoctoral scholarship in Sweden (2015), Young Investigator Award in Italy (2018), and she is the 2019 recipient of the Young Researcher Award in Sweden. Özge writes monthly columns at the newspaper Swedish Daily (Svenska Dagbladet)."
   website: https://twitter.com/ozge_oner
-  
+
 - name:
   image:
   bio:
