--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -28,6 +28,11 @@ speakers:
       image: /assets/images/ChrisWheat.jpg
       bio: "Chris Wheat is the Co-President for the JPMorgan Chase Institute. Prior to joining JPMCI, he served as the Director of Analytics at a financial technology startup, where he led the development of advanced analytics algorithms. He previously was an Assistant Professor at the MIT Sloan School of Management and at the Center for Urban Entrepreneurship and Economic Development at Rutgers Business School. As a faculty member, he taught and researched topics in strategy, entrepreneurship, global microfinance, economic sociology, and social network analysis. Chris earned a B.S.E. in Mechanical & Aerospace Engineering from Princeton University, an M.S. in Computer Science from Stanford University, an M.A. in Sociology from Harvard University, and a Ph.D. in Organizational Behavior from Harvard University."
       website: https://www.jpmorganchase.com/institute/about/leadership/chris-wheat 
+      
+    - name: Timnit Gebru, Ph.D
+      image: /assets/images/TimnitGebru.jpg
+      bio: "Timnit Gebru is a computer scientist whose work explores algorithmic bias and the ethical implications of data mining projects. Timnit is an advocate for diversity in technology and is the cofounder of Black in AI, a community of black researchers working in artificial intelligence. She seeks both to increase diversity in the field of AI and to reduce the negative impacts of racial bias in training data used for human-centric machine learning models."
+      website: https://ai.stanford.edu/~tgebru/ 
      
 participants: 
   title: Participants
