--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -34,6 +34,36 @@ speakers:
       bio: "Timnit Gebru is a computer scientist whose work explores algorithmic bias and the ethical implications of data mining projects. Timnit is an advocate for diversity in technology and is the cofounder of Black in AI, a community of black researchers working in artificial intelligence. She seeks both to increase diversity in the field of AI and to reduce the negative impacts of racial bias in training data used for human-centric machine learning models."
       website: https://ai.stanford.edu/~tgebru/ 
      
+     
+lunchtime talks:
+  title: Bite-Sized Lunchtime Talks
+  people:
+    - name: Black in AI
+      image: /assets/images/BlackinAI.png
+      bio: "Black in AI is a place for sharing ideas, fostering collaborations and discussing initiatives to increase the presence of Black people in the field of Artificial Intelligence."     
+      website: https://blackinai.github.io/#/
+      
+    - name: VaryCSS
+      image: /assets/images/VaryCSS.png
+      bio: "Computational Social Science is an exciting new field of research, and we think it should be diverse and inclusive as it grows. To this end, we provide links to resources, which are intended to support new and emerging CSS scholars currently underrepresented in the field. We also maintain a database of these scholars, which can be used for collaboration and networking, or for finding new voices to speak at conferences, on panels, and in workshop tutorials. These resources are compiled and updated by the CSS community."
+      website: http://varycss.org/
+      
+    - name: The Data Nutrition Project
+      image: /assets/images/DataNutrition.png
+      bio: "Founded in 2018 through the Assembly Fellowship, The Data Nutrition Project takes inspiration from nutritional labels on food, aiming to build labels that highlight the key ingredients in a dataset such as meta-data and populations, as well as unique or anomalous features regarding distributions, missing data, and comparisons to other ‘ground truth’ datasets.      
+      website: https://datanutrition.org/ 
+      
+    - name: California Policy Lab
+      image: /assets/images/CalPolicyLab.png
+      bio: "The California Policy Lab is a non-partisan research institute based at the University of California. Our mission is to improve the lives of Californians by generating evidence that transforms public policy. We do this by forming lasting partnerships between government and California’s flagship public universities to harness the power of research and administrative data."
+      website: https://www.capolicylab.org/
+      
+    - name: The University of California's Publisher Negotiation Team 
+      image: /assets/images/BerkeleyLibrary.jpg
+      bio: " ‘Open access publishing is fundamental to what we do and to our mission. We’re a public research university, and our research is largely funded by public dollars, from residents of California and the U.S. So, we feel an obligation to make the results of our research available to those worldwide who will benefit from our advances, without having to pay to read them.’ - Jeffrey Mackie-Mason”
+      website: https://osc.universityofcalifornia.edu/uc-publisher-relationships/resources-for-negotiating-with-publishers/negotiating-with-scholarly-journal-publishers-a-toolkit/ 
+
+     
 participants: 
   title: Participants
   people:
