--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -58,7 +58,7 @@ lunchtime talks:
       bio: "The California Policy Lab is a non-partisan research institute based at the University of California. Our mission is to improve the lives of Californians by generating evidence that transforms public policy. We do this by forming lasting partnerships between government and California’s flagship public universities to harness the power of research and administrative data."
       website: https://www.capolicylab.org/
       
-    - name: The University of California's Publisher Negotiation Team 
+    - name: The University of California Publisher Negotiation Team 
       image: /assets/images/BerkeleyLibrary.jpg
       bio: " ‘Open access publishing is fundamental to what we do and to our mission. We’re a public research university, and our research is largely funded by public dollars, from residents of California and the U.S. So, we feel an obligation to make the results of our research available to those worldwide who will benefit from our advances, without having to pay to read them.’ - Jeffrey Mackie-Mason”
       website: https://osc.universityofcalifornia.edu/uc-publisher-relationships/resources-for-negotiating-with-publishers/negotiating-with-scholarly-journal-publishers-a-toolkit/ 
