--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -49,9 +49,14 @@ lunchtime talks:
       website: http://varycss.org/
       
     - name: The Data Nutrition Project
-      image: /assets/images/DataNutrition.png
+      image: /assets/images/DataNutrition2.png
       bio: "Founded in 2018 through the Assembly Fellowship, The Data Nutrition Project takes inspiration from nutritional labels on food, aiming to build labels that highlight the key ingredients in a dataset such as meta-data and populations, as well as unique or anomalous features regarding distributions, missing data, and comparisons to other ‘ground truth’ datasets."      
       website: https://datanutrition.org/ 
+      
+    - name: The California Policy Lab
+      image: /assets/images/CalPolicyLab.png
+      bio: "The California Policy Lab is a non-partisan research institute based at the University of California. Our mission is to improve the lives of Californians by generating evidence that transforms public policy. We do this by forming lasting partnerships between government and California’s flagship public universities to harness the power of research and administrative data."
+      website: https://www.capolicylab.org/
      
 participants: 
   title: Participants
