--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -60,8 +60,8 @@ lunchtime talks:
       
     - name: The University of California's Publisher Negotiation Team
       image: /assets/images/BerkeleyLibrary.jpg
-      bio:
-      website: 
+      bio: " ‘Open access publishing is fundamental to what we do and to our mission. We’re a public research university, and our research is largely funded by public dollars, from residents of California and the U.S. So, we feel an obligation to make the results of our research available to those worldwide who will benefit from our advances, without having to pay to read them.’ - Jeffrey Mackie-Mason "
+      website: https://osc.universityofcalifornia.edu/uc-publisher-relationships/resources-for-negotiating-with-publishers/negotiating-with-scholarly-journal-publishers-a-toolkit/
      
 participants: 
   title: Participants
