--- a/_data/2021/bologna/speakers.yml
+++ b/_data/2021/bologna/speakers.yml
@@ -10,6 +10,10 @@
   bio: "Gian Maria Campedelli is a postdoctoral research fellow in Computational Sociology and Criminology at the University of Trento. He holds a Ph.D. in Criminology from Università Cattolica in Milan, and from 2016 to 2019 he worked as a research fellow at Transcrime - the Joint Research Centre on Transnational Crime of Università Cattolica, University of Bologna and University of Perugia. In 2018 he also held a visiting research scholar position at Carnegie Mellon University - School of Computer Science. His research interests focus on the development and application of computational methods for the study of terrorism and organized crime, with specific expertise in complex networks and machine learning."
   website: https://sites.google.com/site/gianmariacampedelli
 
+- name: Sönke Ehret
+  bio: "Sönke Ehret is currently a researcher at the Universities of Bern and Lausanne. His interests touch a number of substantive areas, among them political sophistication and extremism, and the conditions under which social norms change. He is also working on new methods for online and  virtual lab experiments."
+  website:
+  
 - name: Cesar Hidalgo
   bio: "Cesar A. Hidalgo directs the Center for Collective Learning at the Artificial and Natural Intelligence Institute (ANITI) at the University of Toulouse. Prior to joining ANITI, he directed the Collective Learning group at MIT. Hidalgo holds a PhD in Physics from the University of Notre Dame, and is the author of dozens of peer reviewed papers and three books. His latest book is How Humans Judge Machines (MIT Press, 2021)."
   website:
