--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -30,9 +30,8 @@
         published over 150 papers. He has
         recently edited a compendium of work on Turkish language and speech
         processing which has been published by
-        Springer (https://www.springer.com/gp/book/9783319901633,
-         http://www.andrew.cmu.edu/user/ko/toc.pdf, for a table of
-          contents.)  In addition to his long-standing interest in Turkish NLP, he has
+        [Springer](https://www.springer.com/gp/book/9783319901633)- [for a table of contents](http://www.andrew.cmu.edu/user/ko/toc.pdf).  
+        In addition to his long-standing interest in Turkish NLP, he has
         recently been working on applying NLP in educational settings on
         techniques such as interactive reading, question generation, question
         similarity detection and  question answering on technical domains with
@@ -42,7 +41,7 @@
 - name: Erdem Yörük
   image: /assets/images/ErdemYörük.jpg
   bio:  "Erdem Yörük is an Associate Professor in the Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford.
-         He is the principal investigator of the ERC-funded project Emerging Welfare (The New Politics of Welfare Towards an 'Emerging Markets' Welfare State Regime) (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview.
+         He is the principal investigator of the ERC-funded project Emerging Welfare [The New Politics of Welfare Towards an 'Emerging Markets' Welfare State Regime] (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview.
          He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University.
          His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP.
          His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, ‘The Politics of the Welfare State in Turkey’ is forthcoming from the University of Michigan Press."
