--- a/_data/2021/rutgers/teaching_assistants.yml
+++ b/_data/2021/rutgers/teaching_assistants.yml
@@ -2,4 +2,6 @@
   image: /assets/images/BurcuKolcak.png
   bio: "Burcu Kolcak is a doctoral student in the political science department at Rutgers University."
   
-- name: More to be added soon!
+- name: Katie Krumbholz
+  bio: "Katie Krumbholz is a doctoral student in the political science department at Rutgers University."
+  image: /assets/images/KatieKrumbholz.jpeg
