--- a/_data/2021/rutgers/teaching_assistants.yml
+++ b/_data/2021/rutgers/teaching_assistants.yml
@@ -5,3 +5,7 @@
 - name: Katie Krumbholz
   bio: "Katie Krumbholz is a doctoral student in the political science department at Rutgers University."
   image: /assets/images/KatieKrumbholz.jpeg
+ 
+- name: Luxuan Wang
+  bio: "Luxuan Wang is a doctoral student in the School of Communication and Information at Rutgers University."
+  image: /assets/images/LuxuanWang.jpeg
