--- a/_data/2021/london/participants.yml
+++ b/_data/2021/london/participants.yml
@@ -1,59 +1,59 @@
 - name: Alejandro Hermida Carrillo
-  image: https://drive.google.com/open?id=1EEHGoUdvI3wLjnMt3RNsn04PFs1HVXj4
+  image: /assets/images/1EEHGoUdvI3wLjnMt3RNsn04PFs1HVXj4.jpeg
   bio: Alejandro studies the self, role identities, and contemporary work arrangements in his PhD at the Munich School of Management of the LMU Munich. In his projects he uses surveys, experiments, and digital traces. He holds a BSc and an MSc in Psychology from the UNAM (Mexico) and the LMU respectively.
-    
+  
 - name: Amna Anwar
-  image: https://drive.google.com/open?id=1uEQqwy4T2k08yqGK_k5YjZU_36Ws1m-x
+  image: /assets/images/1uEQqwy4T2k08yqGK_k5YjZU_36Ws1m-x.jpeg
   bio: Amna Anwar is a PhD student in Pervasive Computing and Data Science at Nottingham Trent University. She holds a Bachelor's in Computing BSc (Hons). Amna's research interests are in using Natural Language Processing and ubiquitous technologies for crime prevention with the main focus of work being a PhD study investigating how technology fusion can be used to improve the safety of vulnerable individuals. Amna applies novel sentiment analysis tools in conjunction with audio sensors on edge computing devices to detect violent or harmful language; specifically in domestic violence cases.
   
 - name: Ana Macanovic
-  image: https://drive.google.com/open?id=1vEK2JrqU_tiAXVRh0MmYKaBDhtVMAb7n
+  image: /assets/images/1vEK2JrqU_tiAXVRh0MmYKaBDhtVMAb7n.jpeg
   bio: Ana Macanovic is a PhD student at the Department of Sociology, Utrecht University and ICS. She has a background in sociology and behavioural economics. Her research is concerned with cooperation of agents in extra-legal environments. Currently, she is exploring reputation systems in cryptomarkets utilizing text mining methods.
   
 - name: Aradhna Kaushal
-  image: https://drive.google.com/open?id=1_2oGkBMmVXp6BjFbDJ1W_5av8gU6iimJ
+  image: /assets/images/1_2oGkBMmVXp6BjFbDJ1W_5av8gU6iimJ.jpeg
   bio: I am a public health epidemiologist at UCL evaluating the role of social media interventions for promoting cancer screening and early diagnosis of cancer. I am increasingly coming face-to-face with very large data sets which require computational methods to analyse and process.
   
 - name: Damiano Maria Morando
-  image: https://drive.google.com/open?id=1qxrYNOug-fNzHGjDo2B7gHNs7iN7jm3Z
+  image: /assets/images/1qxrYNOug-fNzHGjDo2B7gHNs7iN7jm3Z.jpeg
   bio: Damiano Maria Morando is a PhD candidate in Management at Imperial College Business School.  Before joining Imperial College, Damiano did an internship in a venture capital firm in Milan, focused on technology transfer. His Doctoral Thesis focuses on online networking behaviour as a tool for entrepreneurs to facilitate the accrual of early stage financing.
   
 - name: Jason Burton
-  image: https://drive.google.com/open?id=1smrVHd7eMNJ8Jcy0h321IQcebYAYcD7R
+  image: /assets/images/1smrVHd7eMNJ8Jcy0h321IQcebYAYcD7R.jpeg
   bio: Jason is a PhD student in the Department of Psychological Sciences at Birkbeck, University of London. He uses agent-based modelling, online experiments, and digital trace data to research decision-making in social networks. Jason holds a BA in psychology from UC Santa Barbara and an MSc in organisational psychology from King’s College London.
   
 - name: Judah Axelrod
-  image: https://drive.google.com/open?id=1l1BxZgVpLjCsqlMyOA61YPRy138Di1LR
+  image: /assets/images/1l1BxZgVpLjCsqlMyOA61YPRy138Di1LR.jpeg
   bio: Judah Axelrod is an MSc student in Data Science at the London School of Economics. His research interests are centered around fairness and bias in machine learning and natural language processing applications. Judah previously studied Economics at Rutgers University and worked in antitrust economics and competition policy.
   
 - name: Lana Bilalova
-  image: https://drive.google.com/open?id=1U7UQ0pMEZqpyuh2bEEBwHZ2Z4HlfGena
+  image: /assets/images/1U7UQ0pMEZqpyuh2bEEBwHZ2Z4HlfGena.jpeg
   bio: Lana Bilalova is a PhD Candidate at the London School of Economics and Political Science and a researcher at Justice Interactions and Peacebuilding project.  She uses text as data methods to study political communication and mass media. She has a background in political science, international relations, and mathematical economics.
   
 - name: Luning Sun
-  image: https://drive.google.com/open?id=1ofjquXE97QtSINF5O23657Dcumx7AHXS
+  image: /assets/images/1ofjquXE97QtSINF5O23657Dcumx7AHXS.jpeg
   bio: Luning Sun is a Research Associate at the Cambridge Judge Business School. He received his PhD from the Department of Psychology, University of Cambridge. Luning is interested in the development of psychometric tests and their applications in educational, occupational and clinical settings. His post-doctoral research has been focusing on the new forms of assessment that are enabled by the advancement in psychometric theories and techniques.
   
 - name: Melody Sepahpour-Fard
-  image: https://drive.google.com/open?id=1Wq82WCL6zBx-LCfKZkVlW4EWxatMbARx
+  image: /assets/images/1Wq82WCL6zBx-LCfKZkVlW4EWxatMbARx.jpeg
   bio: Melody Sepahpour-Fard has a background in psychology and linguistics. She is currently a social psychology master's student in a European programme (Global-MINDS). Soon, she will join the Centre for Research Training (CRT) programme in Foundations of Data Science at the University of Limerick. She will study opinion-based networks on social media to better understand social polarization around immigration.
   
 - name: Michael Geers
-  image: https://drive.google.com/open?id=1EIMoOrNtl7b48hRhR6Fo1rv3YihF_D8h
+  image: /assets/images/1EIMoOrNtl7b48hRhR6Fo1rv3YihF_D8h.jpeg
   bio: Michael Geers is a PhD student in Psychology at the Center for Adaptive Rationality at the Max Planck Institute for Human Development in Berlin. His work leverages insights and methods from behavioral science and computational social science to understand important digital challenges and to develop interventions to mitigate them. Specifically, he studies how to reduce the impact of misinformation and how to increase cognitive resilience to microtargeting.
   
 - name: Renáta Topinková
-  image: https://drive.google.com/open?id=1qXmAcXpPwEpSnKLl8disU-DfpaUTQt5E
+  image: /assets/images/1qXmAcXpPwEpSnKLl8disU-DfpaUTQt5E.jpeg
   bio: Renáta Topinková is a PhD student at the Charles University and a researcher at the Institute of Sociology of the Czech Academy of Sciences. Her dissertation examines homophily patterns in online dating. Her research interests include big data, experiments, and social networks, especially in relation to partner selection.
   
 - name: Vince Straub
-  image: https://drive.google.com/open?id=12HtvOHhiPSlIeEnYJP2aykEMRtdgkYny
+  image: /assets/images/12HtvOHhiPSlIeEnYJP2aykEMRtdgkYny.jpeg
   bio: Vince is a graduate research assistant at the Science of Intelligence Cluster working on a project that seeks to understand the development of intelligent behavior. He is particularly interested in the phenomena of collective intelligence and combining biological and social data; he is open to PhD programs in this area.
   
 - name: Vsevolod Suschevskiy
-  image: https://drive.google.com/open?id=1qcW0IsumgUSEbp3oglRx05STMAvmVNE8
+  image: /assets/images/1qcW0IsumgUSEbp3oglRx05STMAvmVNE8.jpeg
   bio: Vsevolod is pursuing a Ms in HCI at HSE University, but he is also affiliated with the University of Bergen's Centre for the Science of Learning & Technology as a research intern. His research interests include computational sociology and agent-based modeling, but he has not published any papers in this field yet.
   
 - name: Zsofia Zador
-  image: https://drive.google.com/open?id=1gdYVJS6u06HKDWLTc3Kf4ylqeDN0G21t
+  image: /assets/images/1gdYVJS6u06HKDWLTc3Kf4ylqeDN0G21t.jpeg
   bio: Zsofi (she/her) is a PhD candidate in economics at the University of Greenwich, London, and an external researcher at ANET Lab, Budapest. She is enthusiastic about networks, data science for gender equality, and all things spatial. Her current research is a network analysis of international trade.
