London: fix two participant images

--- a/_data/2021/london/participants.yml
+++ b/_data/2021/london/participants.yml
@@ -27,7 +27,7 @@
   bio: Judah Axelrod is an MSc student in Data Science at the London School of Economics. His research interests are centered around fairness and bias in machine learning and natural language processing applications. Judah previously studied Economics at Rutgers University and worked in antitrust economics and competition policy.
   
 - name: Lana Bilalova
-  image: /assets/images/1U7UQ0pMEZqpyuh2bEEBwHZ2Z4HlfGena.jpeg
+  image: /assets/images/1U7UQ0pMEZqpyuh2bEEBwHZ2Z4HlfGena.png
   bio: Lana Bilalova is a PhD Candidate at the London School of Economics and Political Science and a researcher at Justice Interactions and Peacebuilding project.  She uses text as data methods to study political communication and mass media. She has a background in political science, international relations, and mathematical economics.
   
 - name: Luning Sun
@@ -47,7 +47,7 @@
   bio: Renáta Topinková is a PhD student at the Charles University and a researcher at the Institute of Sociology of the Czech Academy of Sciences. Her dissertation examines homophily patterns in online dating. Her research interests include big data, experiments, and social networks, especially in relation to partner selection.
   
 - name: Vince Straub
-  image: /assets/images/12HtvOHhiPSlIeEnYJP2aykEMRtdgkYny.jpeg
+  image: /assets/images/12HtvOHhiPSlIeEnYJP2aykEMRtdgkYny.png
   bio: Vince is a graduate research assistant at the Science of Intelligence Cluster working on a project that seeks to understand the development of intelligent behavior. He is particularly interested in the phenomena of collective intelligence and combining biological and social data; he is open to PhD programs in this area.
   
 - name: Vsevolod Suschevskiy
