--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -1,21 +1,17 @@
 - date: All times are in Brazilian (Brasilia - Federal District) Time
 
-- date: 2021-06-13
-  events:
-    - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
-
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
-    - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
-    - name: "10:30 - 11:30 Small group discussions [Lesson plan] (link coming soon)) (*Zoom*)"
-    - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
-    - name: "1:00 - 1:30 Break"
-    - name: "1:30 - 1:45 Introduction to the group exercise [Lesson plan] (link coming soon) [Lesson plan - instructors] (link coming soon) (*Zoom*)"
-    - name: "1:45 - 2:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
+    - name: "10:00 - 11:00 Introduction and logistics"
+    - name: "11:00 - 12:00 Small group discussions [Lesson plan] (link coming soon))"
+    - name: "12:00 - 12:30 Break"
+    - name: "12:30 - 1:30 Small group lunches (optional)"
+    - name: "1:30 - 1:45 Introduction to the group exercise [Lesson plan] (link coming soon)"
+    - name: "1:45 - 2:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
     - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
-    - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "3:15 - 3:45 Break"
+    - name: "4:00 - 5:00 Workshop: Daniel Trielli (SICSS-Chicago)."
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
