--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -68,7 +68,7 @@ lunchtime talks:
 participants: 
   title: Participants
   people:
-    - name: Coming Soon - Check out our Apply page!
+    - name: Coming Soon!
     
 organizers:
   title: Organizer
